# docs/swagger.json
@@ -95,7 +95,12 @@
             }
         },
         "rpc.RemoteStartTransactionResp": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "transaction_id": {
+                    "type": "integer"
+                }
+            }
         },
         "rpc.RemoteStopTransactionReq": {
             "type": "object",
